name:                ll-comp-with-cps
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ll-comp-with-cps#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lang
                     , Lir
                     , Cps
                     , CpsPpr
                     , CpsLint
                     , Sample
                     --, LowerToLir
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , lens >= 4.13
                     , mtl >= 2.2
                     , ansi-wl-pprint >= 0.6
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , DataKinds
                     , KindSignatures

executable ll-comp-with-cps-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ll-comp-with-cps
  default-language:    Haskell2010

test-suite ll-comp-with-cps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ll-comp-with-cps
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ll-comp-with-cps
