name:                sea-of-nodes
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/sea-of-nodes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ast
                     , Parser
                     , Ast2Lir
                     , Lir
                     , Vn
                     , Opt
  build-depends:       base >= 4.7 && < 5
                     , text
                     , transformers >= 0.4
                     , ansi-wl-pprint
                     , containers >= 0.5
                     , lens
                     , adjunctions >= 4.3
                     , parsec
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , ScopedTypeVariables
                     , PatternSynonyms
                     , RecordWildCards
                     , FlexibleContexts
                     , FlexibleInstances
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , TupleSections
                     , StandaloneDeriving
                     , ExistentialQuantification
                     , MultiParamTypeClasses

executable sea-of-nodes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sea-of-nodes
  default-language:    Haskell2010

test-suite sea-of-nodes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sea-of-nodes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sea-of-nodes
